added window class WIP

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.21)
 
+set(SDL_STATIC ON)
+add_subdirectory(external/SDL EXCLUDE_FROM_ALL)
+
 add_library(HydrogenCore STATIC src/window.cc)
 
-target_link_libraries(HydrogenCore PUBLIC SDL2::SDL2-static)
+target_include_directories(HydrogenCore PUBLIC include)
+
+target_link_libraries(HydrogenCore PUBLIC SDL3::SDL3-static)
