bgfx working, displaying internal debug stats

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "files.associations": {
-        "*.rh": "cpp"
+        "*.mal": "clojure",
+        "*.asm": "gbz80",
+        "*.json": "jsonc",
+        "*.tsx": "xml",
+        "*.h": "cpp",
+        "*.rh": "cpp",
+        "xiosbase": "cpp",
+        "filesystem": "cpp"
     },
 }
