--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -3,8 +3,21 @@ cmake_minimum_required(VERSION 3.21)
 
 
 # Core sources
-add_library(HydrogenCore STATIC src/window.cc src/engine.cc src/project.cc src/eventqueue.cc src/event.cc 
-    include/core/window.h  include/core/engine.h  include/core/project.h  include/core/eventqueue.h  include/core/event.h)
+add_library(HydrogenCore STATIC 
+
+                        include/core/actor.h
+                        include/core/asset.h
+    src/assets.cc       include/core/assets.h
+    src/engine.cc       include/core/engine.h
+                        include/core/engineevents.h
+    src/event.cc        include/core/event.h
+    src/eventqueue.cc   include/core/eventqueue.h
+    src/project.cc      include/core/project.h
+    src/scene.cc        include/core/scene.h
+                        include/core/scenespec.h
+    src/window.cc       include/core/window.h
+
+    )
 
 # Core include dir
 target_include_directories(HydrogenCore PUBLIC include)
