assets allllmost loading

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -6,7 +6,8 @@ cmake_minimum_required(VERSION 3.21)
 add_library(HydrogenCore STATIC 
 
                                     include/core/actor.h
-                                    include/core/asset.h
+    src/actorspec.cc                include/core/actorspec.h
+    src/asset.cc                    include/core/asset.h
     src/assets.cc                   include/core/assets.h
     src/engine.cc                   include/core/engine.h
                                     include/core/engineevents.h
@@ -15,7 +16,8 @@ add_library(HydrogenCore STATIC
     src/project.cc                  include/core/project.h
     src/scene.cc                    include/core/scene.h
     src/system.cc                   include/core/system.h
-                                    include/core/scenespec.h
+    src/scenespec.cc                include/core/scenespec.h
+    src/transform.cc                include/core/transform.h
     src/window.cc                   include/core/window.h
 
     src/systems/sys_gravity.cc      include/core/systems/sys_gravity.h
