--- a/runtime/assets/test_actor.yml
+++ b/runtime/assets/test_actor.yml
@@ -1,4 +1,4 @@
-mask: 1
+mask: 3
 transform:
   position:
     x: 0
@@ -13,3 +13,5 @@ transform:
     x: 1
     y: 1
     z: 1
+model:
+  gltf: "assets/camera/AntiqueCamera.gltf"
