--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
         "ms-vscode.cpptools-themes",
         "twxs.cmake",
         "ms-vscode.cmake-tools",
-        "gruntfuggly.todo-tree"
+        "gruntfuggly.todo-tree",
+        "ms-vscode.hexeditor"
     ]
 }
