added bx debug flag

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -51,6 +51,7 @@ set(BGFX_CUSTOM_TARGETS OFF)
 set(BGFX_BUILD_TOOLS_SHADER ON)
 set(BGFX_BUILD_TOOLS ON)
 set(BGFX_INSTALL OFF)
+set(BX_CONFIG_DEBUG ON)
 add_subdirectory(external/bgfx.cmake EXCLUDE_FROM_ALL)
 target_link_libraries(HydrogenCore PUBLIC bgfx)
 target_link_libraries(HydrogenCore PRIVATE bx)
