THE BUTTER UPDATE

--- a/runtime/assets/test_actor.yml
+++ b/runtime/assets/test_actor.yml
@@ -14,4 +14,5 @@ transform:
     y: 1
     z: 1
 model:
-  gltf: "assets/camera/AntiqueCamera.gltf"
+  gltf: "assets/butter/Butter.glb"
+  gltf_binary: true
