--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -9,6 +9,7 @@ add_custom_target(HydrogenRuntime_Assets
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_LIST_DIR}/assets ${CMAKE_CURRENT_BINARY_DIR}/assets
 )
 add_dependencies(HydrogenRuntime HydrogenRuntime_Assets)
+set_target_properties(HydrogenRuntime_Assets PROPERTIES FOLDER "HyRuntimeSupport")
 
 HydrogenCore_SetupMain(HydrogenRuntime)
 HydrogenCore_CopyShaders(HydrogenRuntime ${CMAKE_CURRENT_BINARY_DIR})
