it's building again i am so tired

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -139,5 +139,7 @@ function(HydrogenCore_SetupMain target)
         target_link_libraries(${target} PRIVATE SDL2::SDL2main)
     endif()
 
-    target_sources(${target} PRIVATE ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/src/icon/app.o)
+    if (MSVC)
+        target_sources(${target} PRIVATE ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/src/icon/app.o)
+    endif()
 endfunction()
