working on asset restructuring

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,42 +1,42 @@
 cmake_minimum_required(VERSION 3.21)
 
 # Core sources
-add_library(HydrogenCore STATIC 
+add_library(HydrogenCore STATIC
 
-        src/actorspec.cc                    include/core/actorspec.h
-        src/asset.cc                        include/core/asset.h
-        src/assets.cc                       include/core/assets.h
-        src/engine.cc                       include/core/engine.h
-                                            include/core/engineevents.h
-        src/event.cc                        include/core/event.h
-        src/eventqueue.cc                   include/core/eventqueue.h
-        src/project.cc                      include/core/project.h
-        src/scene.cc                        include/core/scene.h
-        src/system.cc                       include/core/system.h
-        src/systems.cc                      include/core/systems.h
-        src/scenespec.cc                    include/core/scenespec.h
-        src/transform.cc                    include/core/transform.h
-        src/window.cc                       include/core/window.h
+            src/actorspecasset.cc                           include/core/actorspecasset.h
+            src/asset.cc                                    include/core/asset.h
+            src/assets.cc                                   include/core/assets.h
+            src/engine.cc                                   include/core/engine.h
+                                                            include/core/engineevents.h
+            src/event.cc                                    include/core/event.h
+            src/eventqueue.cc                               include/core/eventqueue.h
+            src/project.cc                                  include/core/project.h
+            src/scene.cc                                    include/core/scene.h
+            src/system.cc                                   include/core/system.h
+            src/systems.cc include/core/systems.h
+            src/scenespecasset.cc include/core/scenespecasset.h
+            src/transform.cc include/core/transform.h
+            src/window.cc include/core/window.h
 
-        src/math/mat4x4.cc                  include/core/math/mat4x4.h
-                                            include/core/math/math.h
-        src/math/quaternion.cc              include/core/math/quaternion.h
-        src/math/vector2.cc                 include/core/math/vector2.h
-        src/math/vector3.cc                 include/core/math/vector3.h
+            src/math/mat4x4.cc include/core/math/mat4x4.h
+            include/core/math/math.h
+            src/math/quaternion.cc include/core/math/quaternion.h
+            src/math/vector2.cc include/core/math/vector2.h
+            src/math/vector3.cc include/core/math/vector3.h
 
-        src/systems/gravity.cc              include/core/systems/gravity.h
-        src/systems/render/mesh.cc          include/core/systems/render/mesh.h
-        src/systems/render/renderer.cc      include/core/systems/render/renderer.h
-        src/systems/render/shader.cc        include/core/systems/render/shader.h
-                                            include/core/systems/render/vertex.h
-        src/systems/script/scriptasset.cc   include/core/systems/script/scriptasset.h
-        src/systems/script/scriptcomp.cc    include/core/systems/script/scriptcomp.h
-        src/systems/script/scripting.cc     include/core/systems/script/scripting.h
-    )
+            src/systems/gravity.cc include/core/systems/gravity.h
+            src/systems/render/mesh.cc include/core/systems/render/mesh.h
+            src/systems/render/renderer.cc include/core/systems/render/renderer.h
+            src/systems/render/shader.cc include/core/systems/render/shader.h
+            include/core/systems/render/vertex.h
+            src/systems/script/scriptasset.cc include/core/systems/script/scriptasset.h
+            src/systems/script/scriptcomp.cc include/core/systems/script/scriptcomp.h
+            src/systems/script/scripting.cc include/core/systems/script/scripting.h
+            )
 if (MSVC)
     set(CMAKE_EXE_LINKER_FLAGS
         "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:library")
-endif()
+endif ()
 target_compile_definitions(HydrogenCore PRIVATE "HCORE_DEBUG=$<IF:$<CONFIG:Debug>,1,0>")
 
 # Core include dir
@@ -44,12 +44,12 @@ target_include_directories(HydrogenCore PUBLIC include)
 
 # AngelScript
 add_subdirectory(external/angelscriptsdk/angelscript/projects/cmake)
-add_library(HydrogenCore_AngelScriptExtensions STATIC 
-    external/angelscriptsdk/add_on/scriptstdstring/scriptstdstring.cpp
-)
-target_include_directories(HydrogenCore_AngelScriptExtensions PUBLIC 
-    external/angelscriptsdk/add_on/scriptstdstring/
-)
+add_library(HydrogenCore_AngelScriptExtensions STATIC
+            external/angelscriptsdk/add_on/scriptstdstring/scriptstdstring.cpp
+            )
+target_include_directories(HydrogenCore_AngelScriptExtensions PUBLIC
+                           external/angelscriptsdk/add_on/scriptstdstring/
+                           )
 target_link_libraries(HydrogenCore_AngelScriptExtensions PUBLIC angelscript)
 target_link_libraries(HydrogenCore PUBLIC HydrogenCore_AngelScriptExtensions)
 set_target_properties(angelscript PROPERTIES FOLDER "Vendored/AngelScript")
@@ -64,17 +64,17 @@ set(SDL_TESTS OFF)
 set(SDL_EXAMPLES OFF)
 add_subdirectory(external/SDL EXCLUDE_FROM_ALL)
 target_link_libraries(HydrogenCore PUBLIC SDL2::SDL2-static)
-if(TARGET SDL2::SDL2main)
+if (TARGET SDL2::SDL2main)
     target_link_libraries(HydrogenCore PRIVATE SDL2::SDL2main)
-endif()
+endif ()
 
 set_target_properties(SDL2-static PROPERTIES FOLDER "Vendored/SDL")
 set_target_properties(SDL2_test PROPERTIES FOLDER "Vendored/SDL")
 set_target_properties(SDL2main PROPERTIES FOLDER "Vendored/SDL")
 set_target_properties(sdl_headers_copy PROPERTIES FOLDER "Vendored/SDL")
-if(TARGET SDL2)
+if (TARGET SDL2)
     set_target_properties(SDL2 PROPERTIES FOLDER "Vendored/SDL") # see above comment
-endif()
+endif ()
 
 # OpenGL
 find_package(OpenGL REQUIRED)
@@ -98,10 +98,10 @@ target_link_libraries(HydrogenCore PUBLIC imgui.cmake)
 target_include_directories(HydrogenCore PRIVATE external/sdl-imgui)
 target_include_directories(HydrogenCore PRIVATE external/opengl-imgui)
 
-target_sources(HydrogenCore PRIVATE 
-    external/sdl-imgui/imgui_impl_sdl2.cpp
-    external/opengl-imgui/imgui_impl_opengl3.cpp
-    )
+target_sources(HydrogenCore PRIVATE
+               external/sdl-imgui/imgui_impl_sdl2.cpp
+               external/opengl-imgui/imgui_impl_opengl3.cpp
+               )
 
 set_target_properties(imgui.cmake PROPERTIES FOLDER "Vendored/imgui")
 
@@ -127,19 +127,19 @@ target_link_libraries(HydrogenCore PUBLIC yaml-cpp::yaml-cpp)
 # generated shader code
 function(HydrogenCore_CopyShaders folder)
     add_custom_target(HydrogenCore_CopyShaders
-        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/shaders hcore_assets
-    )
+                      COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/shaders hcore_assets
+                      )
     add_dependencies(HydrogenCore HydrogenCore_CopyShaders)
     set_target_properties(HydrogenCore_CopyShaders PROPERTIES FOLDER "HyCoreSupport")
 endfunction()
 
 # setup a runtime target with the SDL2main library and the windows icon resource
 function(HydrogenCore_SetupMain target)
-    if(TARGET SDL2::SDL2main)
+    if (TARGET SDL2::SDL2main)
         target_link_libraries(${target} PRIVATE SDL2::SDL2main)
-    endif()
+    endif ()
 
     if (MSVC)
         target_sources(${target} PRIVATE ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/src/icon/app.o)
-    endif()
+    endif ()
 endfunction()
