--- a/runtime/assets/project.yml
+++ b/runtime/assets/project.yml
@@ -5,3 +5,11 @@ assets:
     index: 0
     type: 0
     path: "assets/test_scene.yml"
+  -
+    index: 1
+    type: 1
+    path: "assets/test_actor2.yml"
+  -
+    index: 2
+    type: 2
+    path: "assets/test_script.yml"
