--- a/runtime/assets/project.yml
+++ b/runtime/assets/project.yml
@@ -1,15 +1,18 @@
-initialSceneSpec: 0
+initialSceneSpec: 7
 name: "Hello World"
 assets:
-  - 
-    index: 0
-    type: 0
-    path: "assets/test_scene.yml"
-  -
-    index: 1
+  - index: 1
     type: 1
     path: "assets/test_actor2.yml"
-  -
-    index: 2
+  - index: 2
     type: 2
     path: "assets/test_script.yml"
+  - index: 3
+    type: 3
+    path: "assets/test_model.yml"
+  - index: 7
+    type: 0
+    path: "assets/test_scene.yml"
+  - index: 10
+    type: 1
+    path: "assets/test_actor.yml"
