--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -23,11 +23,12 @@ jobs:
       matrix:
         os: [windows-latest]
         build_type: [Release]
+        hydrogen_component: [HydrogenRuntime]
         c_compiler: [cl]
-        include:
-          - os: windows-latest
-            c_compiler: cl
-            cpp_compiler: cl
+#        include:
+#          - os: windows-latest
+#            c_compiler: cl
+#            cpp_compiler: cl
 
     steps:
     - uses: actions/checkout@v4
@@ -44,6 +45,7 @@ jobs:
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
+        --target ${{ matrix.hydrogen_component }}
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
