added artifacts to autobuild

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -58,6 +58,11 @@ jobs:
         --target ${{ matrix.hydrogen_component }}
         --config ${{ matrix.build_type }}
 
+    - uses: actions/upload-artifact@v4
+      with:
+        name: "${{ matrix.hydrogen_component }}-${{ matrix.os }}-${{ matrix.build_type }}"
+        path: ${{ steps.strings.outputs.build-output-dir }}
+
     # - name: Test
     #   working-directory: ${{ steps.strings.outputs.build-output-dir }}
     #   # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
