--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    if: ${{ ! startsWith(github.event.head_commit.message, '[nobuild]') }}
     runs-on: ${{ matrix.os }}
 
     strategy:
