[nobuild] bye bye macos autobuild support

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -22,7 +22,7 @@ jobs:
       #
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [windows-latest, macos-latest]
+        os: [windows-latest]
         build_type: [Release]
         hydrogen_component: [[HydrogenRuntime, runtime]]
         compiler: [cl, clang]
