--- a/runtime/assets/project.yml
+++ b/runtime/assets/project.yml
@@ -1,5 +1,9 @@
-initialSceneSpec: 7
+initial_scene_spec: 7
 name: "Hello World"
+input_actions:
+  - name: fire
+    sources:
+      - key: 4
 assets:
   - index: 1
     type: 1
