--- a/runtime/assets/project.yml
+++ b/runtime/assets/project.yml
@@ -4,6 +4,10 @@ input_actions:
   - name: fire
     sources:
       - key: 4
+  - name: move_x
+    sources:
+      - positive_key: 79
+        negative_key: 80
 assets:
   - index: 1
     type: 1
